--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ before_script:
 
 script:
   - make
-  - DAISY_DIR=ExecuteDaisy make diff
+  - make diff
+  - make little-diff
   - git clone https://github.com/commoncriteria/commoncriteria.github.io.git
   - git clone https://github.com/commoncriteria/ci-scripts.git
   - mkdir -p commoncriteria.github.io/pp/$(basename $TRAVIS_REPO_SLUG)
